Revert "Change adaptive test question container to grow to prevent overlapping"
This reverts commit b229aa3cb2254f9ca47de2231f9410c066cb70f5.

--- a/client/assets/custom.scss
+++ b/client/assets/custom.scss
@@ -2093,8 +2093,7 @@ label.file-upload-btn {
 
   &-question-container {
     min-width: 100%;
-    min-height: 500px;
-    height: auto;
+    height: 500px;
     padding-top: 1em;
   }
 
